--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,243 +1,667 @@
-@font-face{
-    src: url('../Fonts/Roboto/Roboto-Light.ttf');
-    font-family: 'Roboto';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+
+/*  vars */
+:root {
+    --FamilyStyle: 'Roboto', sans-serif;
+    --Color_white: #ffffff;
+    --Color_orange: #f0a83e;
+    --Color_coffe: #3c2313;
+    --Color_black: #222222;
+    --Color-low_opacity: #f0a83e;
+    --Color_ligthGray: #666666;
+    --Color_Special: rgba(251, 250, 246, 255);
+    --Color_ligthCoffe: #786960;
+
 }
+
 
 * {
-    font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
-nav {
-    background-color: #222222;
-    color: #F3F3F3;
-    font-family: 'Roboto', sans-serif;
-}
-section {
-    background-color: #F0A83E;
-    color: #FFFFFF;
+
+
+/*  styles for header */
+.head__container {
+    position: sticky;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 54px;
+    background: var(--Color_orange);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+    top: 0;
 }
 
-span.text1 {
-    color: #3C2313;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
+.head__container #header__languaje-price {
+    display: none;
+
+    background: var(--Color_black);
 }
 
-span.text2 {
-    color: #FFFFFF;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
+.head__container #header__option-menu {
+    align-items: center;
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 54px;
+
 }
 
-a.menu {
-    color: white;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+.fa-bars {
+    font-size: 25px;
+    color: var(--Color_white);
 }
 
-.fa-paw {
-    color: rgba(255, 255, 255);
+
+/*  end code */
+
+/* main */
+main {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    background: url('../img/desktopImg.jpg') no-repeat left;
+    background-size:cover;
+    height: 700px;
+    width: 100%;
 }
 
-h2.titulo1 {
+main h2,
+h4,
+a {
+    font-family: var(--FamilyStyle);
+
+}
+
+main h2 {
+    background-color: var(--Color_white);
+    color: var(--Color_coffe);
+    font-weight: 400  ;
+    width: 70%;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
-    font-size: 30px;
-    font-weight: 400;
+    padding: 10px;
+    margin: 12px;
+    border-radius: 5px;
 }
 
-h3.titulo2 {
-    padding-top: 40px;
+main h4 {
+    color: var(--Color_coffe);
+
 }
 
-div {
-    background-image: url("../IMG/bowl-and-pet-daities-on-green-background 1 (1).png");
-    background-repeat: no-repeat;
-    font-family: 'Roboto', sans-serif;
-    background-size: 100% 100%;
-    padding-bottom: 409px;
+main a {
+    text-decoration: none;
+    padding: 15px 40px 15px 40px;
+    margin-top: 7px;
+    border-radius: 5px;
+    color: var(--Color_white);
+    background: var(--Color-low_opacity);
+
+}
+
+#lading__subitems {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    width: 70%;
+    height: auto;
+}
+
+/* end code */
+
+
+/* section 1 */
+
+
+
+
+#head__category-product {
+    margin: 2rem auto;
+    display: flex;
+    flex-flow: column nowrap;
     text-align: center;
+
 }
 
-h3.boton {
-    background-color:#F0A83E;
-    margin-left: 46.3%;
-    margin-right: 46.3%;
+
+#category__options ul li a,
+span,
+h1 {
+    font-family: var(--FamilyStyle);
+
 }
 
-a.com {
-    color: white;
-    text-decoration: none;
-}
-
-h1.titulo3 {
-    font-family: 'Roboto', sans-serif;
+#category__options h1 {
     font-weight: 700;
-    font-size: 40px;
+    font-size: 3rem;
+    color: var(--Color_coffe);
+
+
 }
 
-p.product {
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
+#category__options ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 65px;
+
+
 }
 
+#category__options i {
+    font-size: 5em;
+    color: var(--Color_orange);
 
-a.card {
+
+}
+
+#category__options ul li a {
+    color: var(--Color_ligthGray);
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
+
+
+}
+
+#category__options ul li {
+    margin: 0.3rem;
+}
+
+#category__options ul li,
+span {
+
+    padding: 0 0.5rem 0 0.5rem;
+
+}
+
+/* end code */
+
+/* content cards */
+#cards {
+    margin: 2rem auto;
+
+}
+
+.card {
+    width: 100%;
+    margin: 2rem auto;
+    background: var(--Color_Special);
+}
+
+.card header img {
+
+    width: 100%;
+
+}
+
+.card section p {
+    font-family: var(--FamilyStyle);
+    font-size: 0.9rem;
     font-weight: 500;
+    color: var(--Color_coffe);
+
 }
 
-p.price {
-    color: #F0A83E;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
+.card section p,
+span {
+    padding: 0.5rem 0 0.5rem 0;
+
 }
 
-h2.contact {
+.card section {
+    height: 60px;
+
+}
+
+.card section span {
+    color: var(--Color_orange);
+
+
+}
+
+/* end code */
+
+
+/* contact */
+
+#form__contact {
+    padding: 15px;
+    margin: auto;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    height: 24rem;
+
+
+}
+
+#form__contact h2 {
+    font-family: var(--FamilyStyle);
+    font-size: 2.5rem;
+    color: var(--Color_coffe);
+}
+
+#form__contact form {
+    padding: 1.2rem;
+    width: 80%;
+
+}
+
+.from__control {
+    display: flex;
+    flex-flow: column nowrap;
+    font-family: var(--FamilyStyle);
+}
+
+.from__control input {
+    margin: 0.3rem;
+    color: var(--Color_white);
+    border-radius: 15px;
+    background: var(--Color_coffe);
+    border: none;
+    width: 100%;
+    height: 45px;
+
+}
+
+.form__control-buttons {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    justify-content: space-around;
+    height: 7rem;
+}
+
+.form__control-buttons a {
+    text-decoration: none;
+    width: 50%;
+    height: 45px;
+    margin: 0.3rem;
+    background: #F0A83E;
+    border-radius: 25px;
     text-align: center;
+    line-height: 3rem;
+    color: var(--Color_white);
 }
 
-p.datos {
-    border-radius: 15px;
+#btn-reset {
+    background: var(--Color_ligthGray);
+}
+
+#btn-send {
+    background: var(--Color_orange);
+}
+
+
+/* end */
+
+
+/* banner */
+
+
+#banner__form {
+    display: flex;
+    flex-direction: column;
+    background: var(--Color_orange);
+    height: 8rem;
+}
+
+#banner__form div {
     color: white;
-    text-align: left;
-    margin-left: 40%;
-    margin-right: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 3rem;
+
+}
+
+#banner__form div span {
+
+    font-family: 700;
+    font-size: 1.5rem;
+
+}
+
+#banner__form div i {
+
+    font-size: 2rem;
+
+}
+
+#banner__form form {
     padding: 10px;
-    background-color: #3C2313;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
 }
 
-a.boton2 {
+#banner__form form input {
+    border: none;
+    border-radius: 15px;
+    height: 40px;
+    width: 70%;
+    padding: 5px 16px 5px 16px;
+}
+
+#banner__form form a {
+    font-family: var(--FamilyStyle);
+
     text-decoration: none;
-    width: 110px;
-    height: 34px;
+    background: var(--Color_coffe);
+    color: var(--Color_white);
+    height: 35px;
+    width: 20%;
     border-radius: 15px;
-    color: white;
-    background-color: #8A8787;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-left: 44.5%;
+    padding: 4px;
+    margin: 0.5rem;
+    text-align: center;
+    line-height: 35px;
 }
 
-a.boton3 {
-    text-decoration: none;
-    background-size: 110px 34px ;
-    border-radius: 15px;
-    color: white;
-    background-color: #F0A83E;
-    padding-left: 20px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
+/* end banner code */
 
-.fa-envelope-open-text {
-    color: white;
-    font-size: 30px;
-}
 
-#suscripcion {
-    margin-top: 50px;
-    background-color:#F0A83E;
-    padding-top: 15px;
-    padding-bottom: 24px;
-    padding-left: 20px;
-}
-
-span.susp {
-    font-size: 20px;
-    font-weight: 700;
-}
-
-span.email {
-    background-size: 271px 40px;
-    border-radius: 15px;
-    background-color: white;
-    color: #A0A0A0;
-    padding-right: 160px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin-left: 900px;
-}
-
-a.botonsus {
-    text-decoration: none;
-    background-color:#3C2313;
-    border-radius: 15px;
-    color: white;
-    padding: 10px;
-}
+/*  foooter */
 
 footer {
-    background-color: #3C2313;
-    color: white;
-    margin-bottom: 0px;
+    background: #3c2313;
+    display: flex;
+    align-items: center;
+    flex-flow: column-reverse;
 }
 
-h2.M1 {
-    font-size: 20px;
+footer ul {
+
+    list-style: none;
+
+
+}
+
+footer img {
+    padding: 15px;
+
+}
+
+.info__subItem {
+    padding: 7px;
+}
+
+.info__subItem a {
+    font-family: var(--FamilyStyle);
     font-weight: 700;
-}
-
-p.p1 {
-    color: #8A8787;
-    font-size: 10px;
-}
-
-.fa-map-marked-alt {
-    border-radius: 50px;
-    background-color: #8A8787;
     color: white;
-    font-size: 40px;
+    text-decoration: none;
+    font-size: 24px
+}
+
+.info__subItem i {
+    font-size: 35px;
+    color: white;
+    margin: auto 0.4em;
+    background: var(--Color_ligthGray);
+    border-radius: 50%;
     border: 5px solid #786960;
     padding: 10px;
-}
-
-.fa-phone-alt {
-    border-radius: 50px;
-    background-color: #8A8787;
-    color: white;
-    font-size: 40px;
-    border: 5px solid #786960;
-    padding: 10px;
-}
-
-.fa-envelope {
-    border-radius: 50px;
-    background-color: #8A8787;
-    color: white;
-    font-size: 40px;
-    border: 5px solid #786960;
-    padding: 10px;
-}
-
-span.text3 {
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-}
-
-span.text4 {
-    color: #F0A83E;
-    font-size: 20px;
-    font-weight: 700;
-}
-
-p.logo {
-    margin-bottom: 0%;
-}
-
-p.fin {
-    background-color: black;
-    color: white;
     text-align: center;
-    margin-top: 0%;
-    font-size: 10px;
-    padding: 5px;
 }
+
+
+.subItem__child {
+    font-family: var(--FamilyStyle);
+    color: var(--Color_ligthGray);
+    font-weight: 700;
+    position: relative;
+    left: 55px;
+    bottom: 9px;
+
+}
+
+/*  end  */
+
+/* all rigths reserved */
+
+#sub_footer-author {
+    font-family: var(--FamilyStyle);
+    width: 100%;
+    color: white;
+    background: var(--Color_black);
+    font-weight: 700;
+    text-align: center;
+}
+
+/* end  */
+
+
+
+
+/*  media queries */
+
+@media (min-width:768px) {
+    .head__container #header__languaje-price {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 20px;
+        color: white;
+        font-family: var(--FamilyStyle);
+        font-size: 0.8rem;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .head__container #header__languaje-price ul {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    .head__container #header__languaje-price ul li {
+        margin: auto 2em;
+
+    }
+
+    #option__menu-items {
+        display: flex;
+        list-style: none;
+    }
+
+    #option__menu-items li a,
+    i {
+        text-decoration: none;
+        color: var(--Color_white);
+        font-weight: 200;
+        font-size: 0.9rem;
+
+    }
+
+    #option__menu-items li {
+        margin: auto 0.5rem;
+
+    }
+ 
+    /* #header__option-menu i{
+        display: none;
+    } */
+
+    #bard{
+        display: none;
+    }
+
+    .head__container {
+
+        height: 62px;
+
+    }
+
+
+
+    main h2 {
+        width: 40%;
+        margin-left: 10em;
+
+    }
+
+    #category__options ul {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 65px;
+
+
+    }
+
+
+    #category__options ul li {
+        margin: 0.1rem;
+    }
+
+
+    /*    #category__options ul li,
+    span {
+    
+        padding: 0 0.8rem 0 0.5rem;
+    
+    } */
+
+
+
+
+}
+
+@media (min-width:769px) {
+  
+    .head__container #header__languaje-price {
+        justify-content: space-between;
+
+
+
+    }
+
+    .head__container #header__languaje-price p {
+        padding-left: 90px;
+
+    }
+
+    .head__container #header__languaje-price ul {
+        padding-right: 60px;
+
+    }
+
+    .head__container #header__option-menu {
+      justify-content: space-between;
+    }
+    .head__container #header__option-menu img{
+      padding-left: 2rem;
+    }
+    .head__container #header__option-menu ul{
+      padding-right: 2rem;
+    }
+
+  
+    main h2 {
+        width: 40%;
+        align-self: flex-end;
+        
+    }
+    #lading__subitems {
+      align-content: flex-end;
+      width: 90%;
+    }
+    #cards {
+       display: flex;
+       
+    
+    }
+    #cards article {
+       margin: 1rem;
+       
+    
+    }
+
+    .from__control input {
+        width: 40%;
+        align-self: center;
+    }
+
+    .form__control-buttons {
+       justify-content: flex-start;
+       justify-content: center;
+    
+    }
+    .form__control-buttons a {
+       
+        width: 15%;
+        margin: 0.3rem;
+
+    }
+    #banner__form {
+        height: 4rem;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    
+    #banner__form div {
+        justify-content: flex-start;
+        width: 50%;
+        height: 3rem;
+    
+    }
+
+    #banner__form div i {
+
+        font-size: 2rem;
+        padding-left: 3rem;
+    
+    }
+    #banner__form div span {
+
+        padding-left: 1rem;
+    
+    }
+    #banner__form form {
+         height: 30px;
+         width: 40%;
+    
+    }
+
+    footer{
+        flex-direction: row;
+        justify-content: space-between;
+        height: 20rem;
+    }
+
+    footer img{
+      padding-right: 6rem;
+    }
+    #footer__info{
+        padding-top: 05px;
+    }
+    .info__subItem a{
+        font-size: 1.3rem;
+    }
+   
+  
+}
+
+
+
+ @media (min-width:1279px) {
+    main h2 {
+        
+        width: 20rem;
+       
+    }
+  
+} 
